erKURITA
	* Warps maintainment
Evera
	* Everything.
	* Dungeon Teleport System NPCs
	* iRO information gathering.
	* Kafra maintainment.
	* Splitting city/'s into quest/'s.
Musashiden
	*Scripting iRO latest towns (warps, NPCs, ect.)
	*iRO information gathering.
Playtester
	* Monsters spawn, warps maintainment

== Changelog ==

Date		Added
======
07/24
	* Added temporary Rachel spawn file, commented for now [Playtester]
07/23
	* Removed the regular Thanatos spawn, since the quest is now implemented. [MasterOfMuppets]
	* Implemented the Niflheim town invasion. [MasterOfMuppets]
	* Jawaii warp now costs 10,000z [Playtester]
	* Implemented the sign quest, please test it if you have some free time :P [MasterOfMuppets]
	- We need to know if there's any bugs left to implement it in stable
	* Changed the names of some NPCs [MasterOfMuppets]
07/22
	* Removed two warps in Aldebaran in preparation for the sign quest. [MasterOfMuppets]
07/21
	* Fixed a typo in guides_einbr.txt [Playtester]
	* Added the Cube Room Maze thanks to Tharis and Tantarian [Playtester]
07/20
	* Split quest from cities/izlude.txt to quests/quests_izlude.txt [Evera]
	* Split quest from cities/alberta.txt to quests/quests_alberta.txt [Evera]
	* Split quests from cities/amatsu.txt to quests/quests_amatsu.txt [Evera]
	* Split quests from cities/ayothaya.txt to quests/quests_ayothaya.txt [Evera]
	* Split Doomed Sword quests from cities/comodo.txt to quests/quests_comodo.txt [Evera]
	* Split Einbech quests from cities/einbech.txt to quests/quests_ein.txt [Evera]
	* Renamed quests/quests_einbroch.txt to quests/quests_ein.txt [Evera]
	* Split more Einbroch quests in cities/einbroch.txt to quests/quests_einbroch.txt [Evera]
07/19
	* Completed the sign quest warps [MasterOfMuppets]
07/18
	* Fixed a warp in moc_pryd06 [Playtester]
07/17
	* Enchanting a Tiara now costs 2M [Playtester]
	* Added slotted Running Shirt to Comobo Gambling [Playtester]
07/16
	* Small spawn update in Kiel Dungeon [Playtester]
07/15