@@ -40,6 +40,7 @@ Playtester
 Date		Added
 ======
 07/24
+	* Tiny typo fix in a Rekenber Guard dialog [DracoRPG]
 	* Added temporary Rachel spawn file, commented for now [Playtester]
 07/23
 	* Removed the regular Thanatos spawn, since the quest is now implemented. [MasterOfMuppets]
